--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "3d_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,15 +13,16 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.90.0",
     "@react-three/fiber": "^8.15.12",
-    "@types/three": "^0.159.0",
-    "framer-motion": "^10.16.14",
+    "framer-motion": "^10.16.12",
     "maath": "^0.10.4",
+    "math": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.175",
     "react-router-dom": "^6.20.1",
+    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.159.0"
+    "three": "^0.149.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -32,7 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
   }
